# ImKLib

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.cache/clangd/index/: IMK_Params.c.8A49D63A805FB035.idx  IMK_ansi_style.attach.3A09B2C06BCA240A.idx  IMK_ansi_style.h.BEF9E9419334C528.idx  IMK_assert.attach.63C3B83FDC251926.idx  IMK_assert.c.39C9B8AC300EFE2F.idx  IMK_assert.detach.8E023D41466C8FDE.idx  IMK_assert.h.7BC3995B109E75D5.idx  IMK_base.h.1EFCDE80C2635708.idx  IMK_bool.h.0099CE6D79D9A294.idx  IMK_core.h.A9271C4E130D01F0.idx  IMK_errno.attach.687DAF22B8F9D45C.idx  IMK_errno.c.F8894BE71577C27B.idx  IMK_errno.h.B9A470B0212B109D.idx  IMK_error.attach.F83072149231C70B.idx  IMK_error.c.D92974FF96BB6494.idx  IMK_error.h.2464215EC91D935A.idx  IMK_floats.h.CB26A1D07A6F4EE5.idx  IMK_index.slug.914444B3EBDF0DC3.idx  IMK_index_ref.slug.11C63B92279D3FDA.idx  IMK_index_ref.slug.23CFBFA784180ED6.idx  IMK_index_ref.slug.2DA839AA6F5CC59D.idx  IMK_index_ref.slug.460357EBFF98E364.idx  IMK_index_ref.slug.6E731EEE7647A997.idx  IMK_index_ref.slug.6FD8B34355574CAB.idx  IMK_index_ref.slug.7961CE76BFB47552.idx  IMK_ints.h.313E98B1F853388C.idx  IMK_log.attach.AC2245BB57E9EF2E.idx  IMK_log.c.2F531A231B756D7D.idx  IMK_log.detach.F3315F8D854316D5.idx  IMK_log.h.7A4C7EC29A719A3F.idx  IMK_macros.h.9E80FA1822F18EC8.idx  IMK_mem.attach.B5416E71DFC1C65C.idx  IMK_mem.c.3EF0F6CCD562007C.idx  IMK_mem.h.B8482F9541453F64.idx  IMK_modlog.attach.C0DBB49F0D04637A.idx  IMK_modlog.c.2AC3357430A02EDC.idx  IMK_modlog.h.7DA5A4B81DD8AC45.idx  IMK_option.attach.0C9B6014D775EC3B.idx  IMK_option.c.2C24ABE6064466F2.idx  IMK_option.h.C1A97BB110751031.idx  (+37 more)
example/: README.md
examples/: ansi_styles.c  assert.c  errno.c  error.c  inheritance.c  interface.c  klass.c  log.c  modlog.c  namespace.c  option.c  params.c  printf.c  ptr.c  result.c  scope.c  snprintf.c  steap.c  tostr.c  toy_log_level.c  toy_printf.c  typed_alloc.c
include/imklib/: IMK_index.slug  IMK_root_ref.slug  IMK_slug_index.h  IMK_slug_root_ref.h
include/imklib/base/: IMK_base.h  IMK_bool.h  IMK_floats.h  IMK_ints.h  IMK_macros.h  IMK_root_ref.slug  IMK_slug_root_ref.h  IMK_types.h
include/imklib/core/: IMK_Klass.h  IMK_Ptr.h  IMK_core.attach  IMK_core.detach  IMK_core.h  IMK_index_ref.slug  IMK_klass.h  IMK_mem.attach  IMK_mem.detach  IMK_mem.h  IMK_params.attach  IMK_params.detach  IMK_params.h  IMK_ptr.attach  IMK_ptr.detach  IMK_ptr.h  IMK_scope.attach  IMK_scope.detach  IMK_scope.h  IMK_slug_index_ref.h  IMK_slug_root_ref.h  IMK_steap.attach  IMK_steap.detach  IMK_steap.h
include/imklib/error/: IMK_errno.h  IMK_error.h
include/imklib/io/: IMK_assert.h  IMK_printf.h
include/imklib/logging/: IMK_ansi_style.h  IMK_log.h  IMK_modlog.h  ansi_style.h  log.h
include/imklib/optres/: IMK_option.h  IMK_result.h
src/core/: IMK_Params.c  IMK_Ptr.c  IMK_mem.c  IMK_ptr.c  IMK_steap.c
src/core/error/: IMK_errno.c  IMK_error.c
src/error/: IMK_errno.c  IMK_error.c
src/io/: IMK_assert.c  IMK_printf.c
src/logging/: IMK_log.c  IMK_modlog.c  log.c
src/optres/: IMK_option.c  IMK_result.c  optres.c
(+37 files in other folders)
